--- a/lessons.html
+++ b/lessons.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/style.css"/>
     <link rel="stylesheet" href="./css/header-footer.css"/>
     <link rel="stylesheet" href="./css/shared-components.css"/>
-    
+
     <link rel="icon" type="image/png" href="./images/logo_krhacken_r.ico" />
     <link rel="preload" as="image" href="./images/header_background_blured3.webp" type="image/webp" fetchpriority="high">
     <link rel="preload" as="image" href="./images/back.webp" type="image/webp" fetchpriority="high">
@@ -130,7 +130,7 @@
         </ol>
     </section>
 
-    <main class="main-container">
+    <main class="main">
         <section class="category-section">
             <h2 class="main-title category-title">Analyse Forensique</h2>
             <div class="box-container">
