--- a/challenges.html
+++ b/challenges.html
@@ -39,7 +39,7 @@
         <button id="search-toggle-btn" class="fas fa-search" aria-label="Ouvrir la barre de recherche" aria-expanded="false" aria-controls="filter-controls"></button>
         <button id="leaderboard-toggle-btn" class="fas fa-trophy" aria-label="Ouvrir le classement" aria-expanded="false" aria-controls="leaderboard-menu"></button>
         <button id="profile-toggle-btn" class="fas fa-user-circle" aria-label="Ouvrir le menu du profil" aria-expanded="false" aria-controls="profile-menu"></button>
-        </header>
+    </header>
 
     <section class="search-panel" id="filter-controls" aria-hidden="true">
         <i class="fas fa-search panel-icon"></i>
@@ -138,7 +138,7 @@
         <section class="category-section">
             <h2 class="main-title category-title">Analyse Forensique</h2>
             <div class="box-container">
-                <a href="#" class="card challenge-card" data-challenge-id="forensics-metadata-hunt" data-category="Analyse Forensique" data-difficulty="debutant">
+                <a href="#" class="card" data-challenge-id="forensics-metadata-hunt">
                     <i class="fas fa-search card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
@@ -158,7 +158,7 @@
         <section class="category-section">
             <h2 class="main-title category-title">Culture de la Sécurité</h2>
             <div class="box-container">
-                 <a href="#" class="card challenge-card" data-challenge-id="security-phishing-test" data-category="Culture de la Sécurité" data-difficulty="debutant">
+                 <a href="#" class="card" data-challenge-id="security-phishing-test">
                     <i class="fas fa-fish card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
@@ -178,7 +178,7 @@
         <section class="category-section">
             <h2 class="main-title category-title">Cryptographie</h2>
             <div class="box-container">
-                 <a href="#" class="card challenge-card" data-challenge-id="crypto-cesar-salad" data-category="Cryptographie" data-difficulty="debutant">
+                 <a href="#" class="card" data-challenge-id="crypto-cesar-salad">
                     <i class="fas fa-key card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
@@ -192,7 +192,7 @@
                         <i class="fas fa-check-circle checkbox-icon completed" aria-hidden="true"></i>
                     </div>
                 </a>
-                <a href="#" class="card challenge-card" data-challenge-id="crypto-vigenere" data-category="Cryptographie" data-difficulty="initie">
+                <a href="#" class="card" data-challenge-id="crypto-vigenere">
                     <i class="fas fa-unlock-alt card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
@@ -212,7 +212,7 @@
         <section class="category-section">
             <h2 class="main-title category-title">OSINT</h2>
             <div class="box-container">
-                 <a href="#" class="card challenge-card" data-challenge-id="osint-find-me" data-category="OSINT" data-difficulty="debutant">
+                 <a href="#" class="card" data-challenge-id="osint-find-me">
                     <i class="fas fa-user-secret card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
@@ -232,7 +232,7 @@
         <section class="category-section">
             <h2 class="main-title category-title">Pwned (Exploitation Binaire)</h2>
             <div class="box-container">
-                <a href="#" class="card challenge-card" data-challenge-id="pwned-placeholder" data-category="Pwned (Exploitation Binaire)" data-difficulty="none" style="cursor: not-allowed; opacity: 0.7;">
+                <a href="#" class="card" data-challenge-id="pwned-placeholder" style="cursor: not-allowed; opacity: 0.7;">
                     <i class="fas fa-terminal card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
@@ -250,7 +250,7 @@
         <section class="category-section">
             <h2 class="main-title category-title">Sécurité Réseau</h2>
             <div class="box-container">
-                 <a href="#" class="card challenge-card" data-challenge-id="network-port-scan" data-category="Sécurité Réseau" data-difficulty="debutant">
+                 <a href="#" class="card" data-challenge-id="network-port-scan">
                     <i class="fas fa-network-wired card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
@@ -270,7 +270,7 @@
         <section class="category-section">
             <h2 class="main-title category-title">Stéganographie</h2>
             <div class="box-container">
-                 <a href="#" class="card challenge-card" data-challenge-id="stega-hidden-art" data-category="Stéganographie" data-difficulty="debutant">
+                 <a href="#" class="card" data-challenge-id="stega-hidden-art">
                     <i class="fas fa-file-image card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
@@ -290,7 +290,7 @@
         <section class="category-section">
             <h2 class="main-title category-title">Web Hacking</h2>
             <div class="box-container">
-                 <a href="#" class="card challenge-card" data-challenge-id="web-cookie-monster" data-category="Web Hacking" data-difficulty="debutant">
+                 <a href="#" class="card" data-challenge-id="web-cookie-monster">
                     <i class="fas fa-cookie-bite card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
@@ -304,7 +304,7 @@
                         <i class="fas fa-check-circle checkbox-icon completed" aria-hidden="true"></i>
                     </div>
                 </a>
-                 <a href="#" class="card challenge-card" data-challenge-id="web-sql-injection" data-category="Web Hacking" data-difficulty="avance">
+                 <a href="#" class="card" data-challenge-id="web-sql-injection">
                     <i class="fas fa-database card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
@@ -330,7 +330,7 @@
         <a href="https://krhacken.org" target="_blank" rel="noopener noreferrer"> <img src="./images/logo.webp" alt="Logo du club Krhacken"> </a>
         <a href="https://esisar.grenoble-inp.fr" target="_blank" rel="noopener noreferrer"> <img src="./images/logo_esisar.webp" alt="Logo de Grenoble-INP Esisar"> </a>
         <p class="footer-legal">
-            L'ENSEMBLE DE CE SITE RELÈVE DE LA LÉGISLATION FRANÇAISE ET INTERNATIONALE SUR LE DROIT D'AUTEUR ET LA PROPRIÉTÉ INTELLECTUELLE. TOUS LES DROITS DE REPRODUCTION SONT RÉSERVÉS, Y COMPRIS POUR LES DOCUMENTS TÉLÉCHARGEABLES ET LES REPRÉSENTATIONS ICONOGRAPHIQUES ET PHOTOGRAPHIQUES. LA REPRODUCTION DE TOUT OU PARTIE DE CE SITE SUR UN SUPPORT ÉLECTRONIQUE QUEL QU'IL SOIT EST FORMELLEMENT INTERDITE SAUF AUTORISATION EXPRESSE DU DIRECTEUR DE LA PUBLICATION. CE SITE EST ÉDITÉ PAR Le club kr[HACK]en, Grenoble INP Esisar, 25 Rue Barthélémy de Laffemas, 26000 Valence, France.<br>
+            L'ENSEMBLE DE CE SITE RELÈVE DE LA LÉGISLATION FRANÇAISE ET INTERNATIONALE SUR LE DROIT D'AUTEUR ET LA PROPRIÉTÉ INTELLECTUELLE. TOUS LES DROITS DE REPRODUCTION SONT RÉSERVÉS, Y COMPRIS POUR LES DOCUMENTS TÉLÉCHARGEABLES ET LES REPRÉSENTATIONS ICONOGRAPHIQUES ET PHOTOGRAPHIQUES. LA REPRODUCTION DE TOUT OU PARTIE DE CE SITE SUR UN SUPPORT ÉLECTRONIQUE QUEL QU'IL SOIT EST FORMELLEMENT INTERDITE SAUF AUTORISATION EXPRESSE DU DIRECTEUR DE LA PUBLICATION. CE SITE EST ÉDITÉ PAR Le club kr[HACK]en, Grenoble INP Esisar, 50 Rue Barthélémy de Laffemas, 26000 Valence, France.<br>
             EMAIL : <a href="mailto:contact@krhacken.org">contact@krhacken.org</a>
         </p>
     </footer>
