--- a/lessons.html
+++ b/lessons.html
@@ -344,6 +344,11 @@
                 </a>
             </div>
         </section>
+
+        <div id="no-results-message" class="no-results" style="display: none;">
+            <h4>Aucune leçon ne correspond à votre recherche.</h4>
+            <p>Essayez d'ajuster vos filtres ou votre recherche.</p>
+        </div>
         
     </main>
 
