--- a/lessons.html
+++ b/lessons.html
@@ -346,8 +346,7 @@
         </section>
 
         <div id="no-results-message" class="no-results" style="display: none;">
-            <h4>Aucune leçon ne correspond à votre recherche.</h4>
-            <p>Essayez d'ajuster vos filtres ou votre recherche.</p>
+            <p>Aucune leçon ne correspond à votre recherche.</p>
         </div>
         
     </main>
