--- a/challenges.html
+++ b/challenges.html
@@ -28,18 +28,27 @@
         <a href="./index.html"><img src="./images/logo_krhacken_invert2.webp" alt="Logo Krhackademy" width="40" height="40"/></a>
         <h1 class="title"> <a href="./index.html">Kr[HACK]ademy</a> </h1>
         <nav class="nav-bar" aria-label="Navigation principale">
-            <ul id="nav-links">
+            <ul id="nav-links-desktop">
                 <li><a href="./index.html">ACCUEIL</a></li>
-                <li><a href="./lessons.html">LEÇONS</a></li>
-                <li class="active"><a href="./challenges.html">CHALLENGES</a></li>
+                <li><a href="/lessons.html">LEÇONS</a></li>
+                <li  class="active"><a href="./challenges.html">CHALLENGES</a></li>
                 <li><a href="./scenarios.html">SCÉNARIOS</a></li>
             </ul>
         </nav>
-        <button class="fas fa-bars" aria-label="Ouvrir le menu de navigation" aria-expanded="false" aria-controls="nav-links"></button>
+        <button class="fas fa-bars" aria-label="Ouvrir le menu de navigation" aria-expanded="false" aria-controls="mobile-nav-menu"></button>
         <button id="search-toggle-btn" class="fas fa-search" aria-label="Ouvrir la barre de recherche" aria-expanded="false" aria-controls="filter-controls"></button>
         <button id="leaderboard-toggle-btn" class="fas fa-trophy" aria-label="Ouvrir le classement" aria-expanded="false" aria-controls="leaderboard-menu"></button>
         <button id="profile-toggle-btn" class="fas fa-user-circle" aria-label="Ouvrir le menu du profil" aria-expanded="false" aria-controls="profile-menu"></button>
     </header>
+
+    <nav class="nav-bar-mobile" id="mobile-nav-menu" aria-hidden="true">
+        <ul id="nav-links-mobile">
+            <li><a href="./index.html">ACCUEIL</a></li>
+            <li><a href="/lessons.html">LEÇONS</a></li>
+            <li class="active"><a href="./challenges.html">CHALLENGES</a></li>
+            <li><a href="./scenarios.html">SCÉNARIOS</a></li>
+        </ul>
+    </nav>
 
     <section class="search-panel" id="filter-controls" aria-hidden="true">
         <i class="fas fa-search panel-icon"></i>
@@ -47,7 +56,6 @@
             <input type="search" id="search-input" placeholder="Rechercher par nom" aria-label="Rechercher un objet par nom" autocomplete="off">
             <button id="clear-search-btn" class="fas fa-times" aria-label="Effacer la recherche"></button>
         </div>
-        
         <div class="custom-select-wrapper">
             <input type="hidden" id="category-filter" value="all">
             <div class="custom-select" data-select-id="category-filter">
@@ -58,7 +66,6 @@
                 <div class="custom-option" data-value="all">Toutes les catégories</div>
             </div>
         </div>
-
         <div class="custom-select-wrapper">
             <input type="hidden" id="difficulty-filter" value="all">
             <div class="custom-select" data-select-id="difficulty-filter">
@@ -69,7 +76,6 @@
                 <div class="custom-option" data-value="all">Toutes les difficultés</div>
             </div>
         </div>
-
         <div class="custom-select-wrapper">
             <input type="hidden" id="completion-filter" value="all">
             <div class="custom-select" data-select-id="completion-filter">
@@ -82,7 +88,6 @@
                 <div class="custom-option" data-value="not-completed">Non complété</div>
             </div>
         </div>
-
         <button id="close-filter-btn" class="fas fa-times" aria-label="Fermer la barre de recherche"></button>
     </section>
 
