--- a/index.html
+++ b/index.html
@@ -29,17 +29,26 @@
         <a href="./index.html"><img src="./images/logo_krhacken_invert2.webp" alt="Logo Krhackademy" width="40" height="40"/></a>
         <h1 class="title"> <a href="./index.html">Kr[HACK]ademy</a> </h1>
         <nav class="nav-bar" aria-label="Navigation principale">
-            <ul id="nav-links">
+            <ul id="nav-links-desktop">
                 <li class="active"><a href="./index.html">ACCUEIL</a></li>
-                <li><a href="./lessons.html">LEÇONS</a></li>
+                <li><a href="/lessons.html">LEÇONS</a></li>
                 <li><a href="./challenges.html">CHALLENGES</a></li>
                 <li><a href="./scenarios.html">SCÉNARIOS</a></li>
             </ul>
         </nav>
-        <button class="fas fa-bars" aria-label="Ouvrir le menu de navigation" aria-expanded="false" aria-controls="nav-links"></button>
+        <button class="fas fa-bars" aria-label="Ouvrir le menu de navigation" aria-expanded="false" aria-controls="mobile-nav-menu"></button>
         <button id="leaderboard-toggle-btn" class="fas fa-trophy" aria-label="Ouvrir le classement" aria-expanded="false" aria-controls="leaderboard-menu"></button>
         <button id="profile-toggle-btn" class="fas fa-user-circle" aria-label="Ouvrir le menu du profil" aria-expanded="false" aria-controls="profile-menu"></button>
     </header>
+
+    <nav class="nav-bar-mobile" id="mobile-nav-menu" aria-hidden="true">
+        <ul id="nav-links-mobile">
+            <li class="active"><a href="./index.html">ACCUEIL</a></li>
+            <li><a href="/lessons.html">LEÇONS</a></li>
+            <li><a href="./challenges.html">CHALLENGES</a></li>
+            <li><a href="./scenarios.html">SCÉNARIOS</a></li>
+        </ul>
+    </nav>
 
     <section class="profile-panel" id="profile-menu" aria-hidden="true">
         <div class="profile-header">
