--- a/challenges.html
+++ b/challenges.html
@@ -30,7 +30,7 @@
         <nav class="nav-bar" aria-label="Navigation principale">
             <ul id="nav-links-desktop">
                 <li><a href="./index.html">ACCUEIL</a></li>
-                <li><a href="/lessons.html">LEÇONS</a></li>
+                <li><a href="./lessons.html">LEÇONS</a></li>
                 <li  class="active"><a href="./challenges.html">CHALLENGES</a></li>
                 <li><a href="./scenarios.html">SCÉNARIOS</a></li>
             </ul>
@@ -44,7 +44,7 @@
     <nav class="nav-bar-mobile" id="mobile-nav-menu" aria-hidden="true">
         <ul id="nav-links-mobile">
             <li><a href="./index.html">ACCUEIL</a></li>
-            <li><a href="/lessons.html">LEÇONS</a></li>
+            <li><a href="./lessons.html">LEÇONS</a></li>
             <li class="active"><a href="./challenges.html">CHALLENGES</a></li>
             <li><a href="./scenarios.html">SCÉNARIOS</a></li>
         </ul>
