--- a/challenges.html
+++ b/challenges.html
@@ -148,9 +148,8 @@
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
                             <h4>Chasse aux Métadonnées</h4>
-                            <span class="difficulty-tag difficulty-easy">Débutant</span>
+                            <span class="difficulty-tag difficulty-easy">25 <i class="fas fa-flag"></i></span>
                         </div>
-                        <p>Une image cache des informations cruciales dans ses métadonnées. Trouvez le flag !</p>
                     </div>
                     <div class="check-box">
                         <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
@@ -168,9 +167,8 @@
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
                             <h4>Hameçon Furtif</h4>
-                            <span class="difficulty-tag difficulty-easy">Débutant</span>
+                            <span class="difficulty-tag difficulty-easy">25 <i class="fas fa-flag"></i></span>
                         </div>
-                        <p>Analysez cet email suspect. Contient-il un lien de phishing ? Identifiez l'indice.</p>
                     </div>
                     <div class="check-box">
                         <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
@@ -188,9 +186,8 @@
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
                             <h4>Salade César</h4>
-                            <span class="difficulty-tag difficulty-easy">Débutant</span>
+                            <span class="difficulty-tag difficulty-easy">25 <i class="fas fa-flag"></i></span>
                         </div>
-                        <p>Un message chiffré a été intercepté. Il semble utiliser une méthode antique...</p>
                     </div>
                     <div class="check-box">
                         <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
@@ -202,9 +199,8 @@
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
                             <h4>Carré de Vigenère</h4>
-                            <span class="difficulty-tag difficulty-medium">Initié</span>
+                            <span class="difficulty-tag difficulty-medium">50 <i class="fas fa-flag"></i></span>
                         </div>
-                        <p>Un chiffrement polyalphabétique. Trouvez la clé pour déchiffrer le message.</p>
                     </div>
                     <div class="check-box">
                         <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
@@ -222,9 +218,8 @@
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
                             <h4>Retrouve-moi</h4>
-                            <span class="difficulty-tag difficulty-easy">Débutant</span>
+                            <span class="difficulty-tag difficulty-easy">25 <i class="fas fa-flag"></i></span>
                         </div>
-                        <p>À partir d'un simple pseudo, retrouvez le réseau social principal de cette personne.</p>
                     </div>
                     <div class="check-box">
                         <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
@@ -260,9 +255,8 @@
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
                             <h4>Port Ouvert</h4>
-                            <span class="difficulty-tag difficulty-easy">Débutant</span>
+                            <span class="difficulty-tag difficulty-easy">25 <i class="fas fa-flag"></i></span>
                         </div>
-                        <p>Scannez l'adresse IP fournie et trouvez le port non standard qui est ouvert.</p>
                     </div>
                     <div class="check-box">
                         <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
@@ -280,9 +274,8 @@
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
                             <h4>L'Art Caché</h4>
-                            <span class="difficulty-tag difficulty-easy">Débutant</span>
+                            <span class="difficulty-tag difficulty-easy">25 <i class="fas fa-flag"></i></span>
                         </div>
-                        <p>Un message est dissimulé dans cette image. Utilisez les bons outils pour l'extraire.</p>
                     </div>
                     <div class="check-box">
                         <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
@@ -300,9 +293,8 @@
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
                             <h4>Le Monstre des Cookies</h4>
-                            <span class="difficulty-tag difficulty-easy">Débutant</span>
+                            <span class="difficulty-tag difficulty-easy">25 <i class="fas fa-flag"></i></span>
                         </div>
-                        <p>Ce site utilise des cookies pour gérer les sessions. Pouvez-vous devenir administrateur ?</p>
                     </div>
                     <div class="check-box">
                         <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
@@ -314,9 +306,8 @@
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
                             <h4>Injection SQL Basique</h4>
-                            <span class="difficulty-tag difficulty-hard">Avancé</span>
+                            <span class="difficulty-tag difficulty-hard">100 <i class="fas fa-flag"></i></span>
                         </div>
-                        <p>La base de données semble mal protégée. Extrayez les informations confidentielles.</p>
                     </div>
                     <div class="check-box">
                         <i class="fas fa-times-circle checkbox-icon not-completed" aria-hidden="true"></i>
