--- a/lessons/forensics-metadata.html
+++ b/lessons/forensics-metadata.html
@@ -178,7 +178,7 @@
         </article>
     </main>
     
-    <script src="../js/lessons.js" defer></script>
+    <script src="../js/progress-tracker.js" defer></script> 
 
 </body>
 </html>
