--- a/challenges.html
+++ b/challenges.html
@@ -143,7 +143,7 @@
         <section class="category-section">
             <h2 class="main-title category-title">Analyse Forensique</h2>
             <div class="box-container">
-                <a href="#" class="card" data-challenge-id="forensics-metadata-hunt">
+                <a href="./challenges/challtemp.html" class="card" data-challenge-id="forensics-metadata-hunt">
                     <i class="fas fa-search card-icon" aria-hidden="true"></i>
                     <div class="card-text-content">
                         <div class="card-title-wrapper">
