--- a/lessons/forensics-metadata.html
+++ b/lessons/forensics-metadata.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
     
     <link rel="stylesheet" href="../css/style.css"/>
-    <link rel="stylesheet" href="../css/lesson-page.css"/>
+    <link rel="stylesheet" href="../css/content-page.css"/>
 
     <link rel="preload" as="image" href="../images/header_background_blured3.webp" type="image/webp" fetchpriority="high">
     <link rel="preload" as="image" href="../images/back.webp" type="image/webp" fetchpriority="high">
@@ -98,7 +98,7 @@
                     <li>Revision Number (nombre de sauvegardes)</li>
                     <li>Company, Manager, ...</li>
                 </ul>
-                <p><strong>Exemple :</strong> Une entreprise retrouve son plan stratégique Plan_Secret.docx sur internet. L'analyse révèle Creator: "Hugo" et Last Modified By: "Rob". L'enquête peut donc se concentrer sur l'activité de Rob.</p>
+                <p><strong>Exemple :</strong> Une entreprise retrouve son plan stratégique Plan_Secret.docx sur internet. L'analyse révèle Creator: "Hugo" et Last Modified By: "Bob". L'enquête peut donc se concentrer sur l'activité de Bob.</p>
                 <h3>2. Les images (.jpg, .heic, .cr2)</h3>
                 <p>Les métadonnées EXIF (Exchangeable Image File Format) peuvent transformer une simple image en une preuve factuelle irréfutable.</p>
                 <p>Métadonnées clés :</p>
