--- a/lessons/forensics-intro.html
+++ b/lessons/forensics-intro.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
     
     <link rel="stylesheet" href="../css/style.css"/>
-    <link rel="stylesheet" href="../css/lesson-page.css"/>
+    <link rel="stylesheet" href="../css/content-page.css"/>
 
     <link rel="preload" as="image" href="../images/header_background_blured3.webp" type="image/webp" fetchpriority="high">
     <link rel="preload" as="image" href="../images/back.webp" type="image/webp" fetchpriority="high">
