--- a/lessons-content/forensics-metadata.html
+++ b/lessons-content/forensics-metadata.html
@@ -129,6 +129,6 @@
     </p>
 </section>
 <nav class="content-navigation">
-    <a href="../lessons.html" class="nav-button prev-button"><i class="fas fa-arrow-left" aria-hidden="true"></i> Retour aux leçons</a>
-    <a href="../lessons.html" class="nav-button next-button">Valider la leçon <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
+    <a href="./lessons.php" class="nav-button prev-button"><i class="fas fa-arrow-left" aria-hidden="true"></i> Retour aux leçons</a>
+    <a href="./lessons.php" class="nav-button next-button">Valider la leçon <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav>
