--- a/public/lessons-content/hashage.html
+++ b/public/lessons-content/hashage.html
@@ -196,6 +196,15 @@
     </p>
 </section>
 
+<section class="content-block">
+    <h2><i class="fas fa-info-circle" aria-hidden="true"></i>Informations sur le document</h2>
+    <p>
+        <b>Titre :</b> Hachage 101<br>
+        <b>Auteurs :</b> Titouan Deluen-Ringel, Clémentine Aubert<br>
+        <b>Date de publication :</b> 24 décembre 2023
+    </p>
+</section>
+
 <nav class="content-navigation">
     <a href="./lessons.php" class="nav-button prev-button"><i class="fas fa-arrow-left" aria-hidden="true"></i> Retour aux leçons</a>
     <a href="./lessons.php" class="nav-button next-button">Valider la leçon <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
