--- a/public/lessons-content/hashage.html
+++ b/public/lessons-content/hashage.html
@@ -197,7 +197,7 @@
 </section>
 
 <section class="content-block">
-    <h2><i class="fas fa-info-circle" aria-hidden="true"></i>Informations sur le document</h2>
+    <h2><i class="fas fa-info-circle" aria-hidden="true"></i>Informations sur le document original</h2>
     <p>
         <b>Titre :</b> Hachage 101<br>
         <b>Auteurs :</b> Titouan Deluen-Ringel, Clémentine Aubert<br>
