--- a/public/lessons-content/hashage.html
+++ b/public/lessons-content/hashage.html
@@ -44,9 +44,9 @@
         Il existe différentes fonctions de hachage, cryptographique ou non. Pour les fonctions cryptographiques on pourra par exemple citer :
     </p>
     <ul>
-        <li><b>Message Digest 5 (MD5) :</b> Très utilisé pendant longtemps. Il n’est plus considéré comme sûr suite à la découverte d’une méthode d’attaque par collisions</li>
-        <li><b>Secure Hash Algorithm (SHA) :</b> Il existe beaucoup de variantes utilisées de celui-ci. Une attaque par collision a été effectuée contre SHA-1. Un format courant est SHA2-256.</li>
-        <li><b>Whirlpool :</b> Ce format a été conçu de façon similaire à AES, ce qui garantit une haute fiabilité et une grand robustesse. Il génère des empreintes de 512 bits, ce qui est pour le moment assez rare.</li>
+        <li><b>Message Digest 5 (MD5) :</b> Très utilisé pendant longtemps. Il n’est plus considéré comme sûr suite à la découverte d’une méthode d’attaque par collisions <li>Exemple : 938c2cc0dcc05f2b68c4287040cfcf71</li> </li>
+        <li><b>Secure Hash Algorithm (SHA) :</b> Il existe beaucoup de variantes utilisées de celui-ci. Une attaque par collision a été effectuée contre SHA-1. Un format courant est SHA2-256. <li>Exemple : 8c25cb3686462e9a86d2883c5688a22fe738b0bbc85f458d2d2b5f3f667c6d5a</li> </li>
+        <li><b>Whirlpool :</b> Ce format a été conçu de façon similaire à AES, ce qui garantit une haute fiabilité et une grand robustesse. Il génère des empreintes de 512 bits, ce qui est pour le moment assez rare. <li>Exemple : 7ca8eaaaa15eaa4c038b4c47b9313e92da827c06940e69947f85bc0fbef3eb8fd254da220ad9e208b6b28f6bb9be31dd760f1fdb26112d83f87d96b416a4d258</li> </li>
     </ul>
     <p>
         <b>Construction de Merkle Damgård :</b> Cette construction utilise des méthodes de compression et de division par blocs pour permettre de créer une sortie de taille fixe avec une entrée de taille quelconque. Les formats MD5 et SHA-1 entre autre reposent sur cette construction, que l’on pourrait voir comme l’algorithme qui permet de former le hash. Cependant cette construction présente d’importants problèmes : pour deux chaines a et b, si hachage(a)=hachage(b) alors sous certaines conditions on a hachage(ax) = hachage(bx), et ce quelque soit x. De plus les empreintes produites contiennent toutes les informations nécessaire pour continuer à hasher, et donc potentiellement ajouter des données à la chaîne.
